--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -2,10 +2,10 @@ h1 {
     color: cyan;
 } 
 
-.task-name {
+.contact-name {
     font-weight: bold;
     color: cadetblue
 }
-.task-action {
+.contact-action {
     cursor: pointer;
 }
